imagen header agregada

--- a/src/components/Nav-bar.astro
+++ b/src/components/Nav-bar.astro
@@ -2,22 +2,22 @@
 
 ---
 
-<header class="flex align-middle justify-between h-auto w-full py-6 bg-transparent text-white font-barlow font-semibold">
+<header class=" flex align-middle justify-between h-auto w-full py-6 bg-transparent text-white font-barlow font-semibold">
     <div class=" flex align-middle">
         <a class=" px-8 py-3 text-3xl" href="#">sunnyside</a>
     </div>
 
     <div class="hidden sm:block">
         <ul class=" flex gap-2 mx-5 py-6">
-            <li><a class=" transition-all px-5 py-3 rounded-full hover:bg-Dark-grayish-blue active:bg-white active:text-Very-dark-desaturated-blue" href="#">About</a></li>
-            <li><a class=" transition-all px-5 py-3 rounded-full hover:bg-Dark-grayish-blue active:bg-white active:text-Very-dark-desaturated-blue" href="#">Services</a></li>
-            <li><a class=" transition-all px-5 py-3 rounded-full hover:bg-Dark-grayish-blue active:bg-white active:text-Very-dark-desaturated-blue" href="#">Projects</a></li>
-            <li><a class=" transition-all px-5 py-3 rounded-full hover:bg-Dark-grayish-blue active:bg-white active:text-Very-dark-desaturated-blue" href="#">Contact</a></li>
+            <li><a class=" transition-all px-5 py-3 rounded-full hover:bg-Dark-grayish-blue focus:bg-white focus:text-Very-dark-desaturated-blue" href="#">About</a></li>
+            <li><a class=" transition-all px-5 py-3 rounded-full hover:bg-Dark-grayish-blue focus:bg-white focus:text-Very-dark-desaturated-blue" href="#">Services</a></li>
+            <li><a class=" transition-all px-5 py-3 rounded-full hover:bg-Dark-grayish-blue focus:bg-white focus:text-Very-dark-desaturated-blue" href="#">Projects</a></li>
+            <li><a class=" transition-all px-5 py-3 rounded-full hover:bg-Dark-grayish-blue focus:bg-white focus:text-Very-dark-desaturated-blue" href="#">Contact</a></li>
         </ul>
     </div>
 
-    <div class="block sm:hidden">
-        <button class=" bg-slate-700">
+    <div class="flex align-middle justify-center sm:hidden px-8 py-3">
+        <button>
             <svg width="24" height="18" xmlns="http://www.w3.org/2000/svg">
                 <path d="M24 16v2H0v-2h24zm0-8v2H0V8h24zm0-8v2H0V0h24z" fill="#FFF" fill-rule="evenodd"/>
             </svg>
