--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,35 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import NavBar from '../components/Nav-bar.astro';
+import { Image } from 'astro:assets';
+import arrowDown from '../images/icon-arrow-down.svg';
+import eggImage from '../images/image-transform.jpg';
 ---
 
 <Layout title="Sunny side">
 	<main class=" bg-no-repeat bg-cover bg-center h-screen w-full">
-		<NavBar/>
+		<header>
+			<NavBar/>
+		</header>
 		<div class=" mx-auto flex flex-col justify-center items-center h-1/2 w-11/12 ">
 			<h1 class=" text-center tracking-superwidest text-4xl h-auto font-fraunces font-black text-White">WE ARE CREATIVES</h1>
-			<div class=" w-full h-36 object-cover" style="background-image: url(../images/icon-arrow-down.svg);"></div>
+			<Image class=' mt-16' src={arrowDown} alt='arrowDown'/>
 		</div>
 	</main>
+
+	<section>
+		<div class=" h-screen w-full flex flex-col sm:flex-row">
+			<Image class=' ' src={eggImage} alt='egg'/>
+			<article class=" h-full w-full my-10 flex flex-col justify-around text-center">
+				<h2 class=" font-fraunces font-black text-3xl text-Very-dark-desaturated-blue">Transform your <br/> brand</h2>
+				<p class=" font-barlow font-semibold text-lg mx-5 text-Grayish-blue">We are a full-service creative agency specializing in helping brands grow fast.
+					Engage your clients through compelling visuals that do most of the
+					marketing for you.
+				</p>
+				<a class=" relative before:top-3/4 before:rounded-full before:absolute before:h-3 before:w-full before:bg-yellow-200 font-fraunces font-black text-Very-dark-desaturated-blue w-1/3 mx-auto" href="#">LEARN MORE</a>
+			</article>
+		</div>
+	</section>
 </Layout>
 
 <style>
