footer creado + imagenes de redes sociales

--- a/src/components/Nav-bar.astro
+++ b/src/components/Nav-bar.astro
@@ -9,10 +9,10 @@
 
     <div class="hidden sm:block">
         <ul class=" flex gap-2 mx-5 py-6">
-            <li><a class=" transition-all px-5 py-3 rounded-full hover:bg-Grayish-blue focus:bg-white focus:text-Very-dark-desaturated-blue" href="#">About</a></li>
-            <li><a class=" transition-all px-5 py-3 rounded-full hover:bg-Grayish-blue focus:bg-white focus:text-Very-dark-desaturated-blue" href="#">Services</a></li>
-            <li><a class=" transition-all px-5 py-3 rounded-full hover:bg-Grayish-blue focus:bg-white focus:text-Very-dark-desaturated-blue" href="#">Projects</a></li>
-            <li><a class=" transition-all px-5 py-3 rounded-full hover:bg-Grayish-blue focus:bg-white focus:text-Very-dark-desaturated-blue" href="#">Contact</a></li>
+            <li><a class=" transition-all px-5 py-3 rounded-full hover:bg-white-transparent focus:bg-white focus:text-Very-dark-desaturated-blue" href="#">About</a></li>
+            <li><a class=" transition-all px-5 py-3 rounded-full hover:bg-white-transparent focus:bg-white focus:text-Very-dark-desaturated-blue" href="#">Services</a></li>
+            <li><a class=" transition-all px-5 py-3 rounded-full hover:bg-white-transparent focus:bg-white focus:text-Very-dark-desaturated-blue" href="#">Projects</a></li>
+            <li><a class=" transition-all px-5 py-3 rounded-full hover:bg-white-transparent focus:bg-white focus:text-Very-dark-desaturated-blue" href="#">Contact</a></li>
         </ul>
     </div>
 
