--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
-
+import { fade } from 'astro:transitions';
+import Footer from '../components/Footer.astro';
+import ViewTransitions from 'astro/components/ViewTransitions.astro';
 interface Props {
 	title: string;
 }
@@ -19,9 +21,11 @@ const { title } = Astro.props;
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;600&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap" rel="stylesheet">
 		<title>{title}</title>
+		<ViewTransitions/>
 	</head>
 	<body>
 		<slot/>
+		<Footer/>
 	</body>
 </html>
 <style is:global>
