fuente corregida en el header

--- a/src/components/Nav-bar.astro
+++ b/src/components/Nav-bar.astro
@@ -4,7 +4,7 @@
 
 <header class=" flex align-middle justify-between h-auto w-full py-6 bg-transparent text-white font-barlow font-semibold">
     <div class=" flex align-middle">
-        <a class=" px-8 py-3 text-3xl" href="#">sunnyside</a>
+        <a class=" px-8 py-3 text-3xl font-barlow font-black" href="#">sunnyside</a>
     </div>
 
     <div class="hidden sm:block">
