--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -53,6 +53,8 @@ import emily from '../images/image-emily.jpg';
 					paragrap='We put our trust in sunnyside and they delivered, making sure our needs were met and deadlines were always hit.'
 					name='Emily R.'
 					ocupation='Marketing Director'/>
+
+		<ClientCard avatar={}/>
 	</section>
 
 </Layout>
